# alis

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: macos-titlebar-appearance.md  voice-mode-architecture.md
src/: App.tsx  CLAUDE.md  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  asr_aliyun.rs  audio_engine.m  audio_engine.rs  lib.rs  main.rs  tts.rs
src/components/: CLAUDE.md  DebugOverlay.tsx
src/components/Avatar/: index.tsx
src/components/InputBar/: CLAUDE.md  index.tsx
src/components/LyricStream/: index.tsx
src/components/SideNav/: index.tsx
src/components/drawers/: CLAUDE.md  DrawerPanel.tsx  MemoryDrawer.tsx  NotebookDrawer.tsx  SettingsDrawer.tsx
src/lib/: CLAUDE.md  affinity.ts  ai.ts  aiModels.ts  asr.ts  characterVoice.ts  db.ts  debugLog.ts  memory.ts  messageText.ts  persona.ts  recorder.ts  replyPostprocess.ts  tts.ts
src/stores/: CLAUDE.md  index.ts
ui/alice_dialogue_notebook_aligned/: code.html
ui/alice_memory_archive_refined_alignment/: code.html
ui/alice_primary_interface_redesign/: code.html
ui/nocturne/: DESIGN.md
ui/official/: code.html  index.html
