[package]
name = "alis"
version = "0.1.0"
description = "阿丽丝 — 住在电脑里的虚拟朋友"
authors = ["zhangzhao"]
edition = "2021"

[lib]
name = "alis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "alis"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
