[package]
name = "yamada"
version = "0.1.0"
description = "田山小姐 — 住在电脑里的虚拟朋友"
authors = ["zhangzhao"]
edition = "2021"

[lib]
name = "yamada_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yamada"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
base64 = "0.22"
flate2 = "1"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
